fixed bug with comments/replies/comments text displaying by switching their p tag whitepspace css property from pre to pre-wrap

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -19,6 +19,6 @@ body {
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
-.whitespace-pre {
-  white-space: pre;
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
 }
